--- a/.github/workflows/git-versioning.yaml
+++ b/.github/workflows/git-versioning.yaml
@@ -23,7 +23,7 @@ jobs:
                 id: semver
                 uses: Paulhatch/semantic-version@v5.0.3
                 with:
-                    tag_prefix: "v1"
+                    tag_prefix: "v"
                     major_pattern: "major:"
                     minor_pattern: "minor:"
                     version_format: "${major}.${minor}.${patch}-rc${increment}"
