--- a/.github/workflows/dotnet-image-generation.yaml
+++ b/.github/workflows/dotnet-image-generation.yaml
@@ -9,10 +9,6 @@ on:
                 required: true
                 type: string
         secrets:
-            DOCKERHUB_USERNAME:
-                required: true
-            DOCKERHUB_TOKEN:
-                required: true
             ORG_FULL_ACCESS_TOKEN:
                 required: true
 
@@ -29,9 +25,11 @@ permissions:
     checks: write
 
 env:
+    REGISTRY: ghcr.io
     TESTCONTAINERS_HOST_OVERRIDE: "host.docker.internal"
     TESTCONTAINERS_RYUK_DISABLED: "true"
     ACTIONS_ALLOW_UNSECURE_COMMANDS: true # This is needed for running: "echo set-env"
+    NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages  # This should ensure that NuGet packages are always stored in the location
 
 jobs:
     discover:
@@ -47,8 +45,8 @@ jobs:
             
             -   name: Set env vars
                 run: |
-                    echo "NUGET_USERNAME=${{ vars.NUGET_USERNAME }}" >> $GITHUB_ENV
-                    echo "NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}" >> $GITHUB_ENV
+                    echo "::set-env name=NUGET_USERNAME::${{ vars.NUGET_USERNAME }}"
+                    echo "::set-env name=NUGET_TOKEN::${{ secrets.ORG_FULL_ACCESS_TOKEN }}"
 
             -   name: Configure dotnet
                 uses: actions/setup-dotnet@v4
@@ -88,68 +86,40 @@ jobs:
                     path: coverage/*.trx    # Path to the test results
                     reporter: dotnet-trx    # Format of the test results
 
-    docker:
-        runs-on: ubuntu-latest
-        needs: [discover, test]
+    build-edge:
         if: always() && !cancelled() && (needs.test.result == 'success' || needs.test.result == 'skipped')
+        name: create edge build
+        needs: [discover, test]
+        uses: School-TestExam/core-pipelines/.github/workflows/dotnet-image-publish.yaml@main
+        secrets: inherit
+        with:
+            repository: ${{ inputs.repository }}
+            version: ${{ needs.discover.outputs.version }}
+            latest: false
+
+    build-latest:
+        if: always() && !cancelled() && (needs.test.result == 'success' || needs.test.result == 'skipped')
+        name: create edge build
+        needs: [discover, test]
+        uses: School-TestExam/core-pipelines/.github/workflows/dotnet-image-publish.yaml@main
+        secrets: inherit
+        with:
+            repository: ${{ inputs.repository }}
+            version: ${{ needs.discover.outputs.version }}
+            latest: true
+
+    tag-branch:
+        if: always() && !cancelled() && (needs.test.result == 'success' || needs.test.result == 'skipped') && github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
+        runs-on: ubuntu-latest
+        needs: [discover, test, build-latest]
         steps:
             -   uses: actions/checkout@v4
                 with:
                     fetch-depth: 0
-
-            -   name: Set env vars
-                run: |
-                    echo "NUGET_USERNAME=${{ vars.NUGET_USERNAME }}" >> $GITHUB_ENV
-                    echo "NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}" >> $GITHUB_ENV
-
-            -   name: Configure dotnet
-                uses: actions/setup-dotnet@v4
-                with:
-                    source-url: ${{ vars.NUGET_LOCATION }}
-                env:
-                    NUGET_AUTH_TOKEN: ${{ secrets.ORG_FULL_ACCESS_TOKEN }}
-                
-            -   name: Configure QEMU
-                uses: docker/setup-qemu-action@v3
-    
-            -   name: Configure buildx
-                uses: docker/setup-buildx-action@v3
             
-                    
-            -   name: Dockerhub login
-                uses: docker/login-action@v2
-                with:
-                    username: ${{ secrets.DOCKERHUB_USERNAME }}
-                    password: ${{ secrets.DOCKERHUB_TOKEN }}
-            
-            -   name: Build and push Docker image release
-                if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-                uses: docker/build-push-action@v4
-                with:
-                        push: true
-                        tags: |
-                            ${{ inputs.repository }}:latest
-                            ${{ inputs.repository }}:edge
-                            ${{ inputs.repository }}:${{ needs.discover.outputs.version }}
-                        build-args: |
-                            version=${{ needs.discover.outputs.version }}
-                            NUGET_USERNAME=${{ vars.NUGET_USERNAME }}
-                            NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}
-
-            -   name: Build and push docker image pre-release
-                if: github.event_name == 'pull_request'
-                uses: docker/build-push-action@v4
-                with:
-                        push: true
-                        tags: |
-                            ${{ inputs.repository }}:edge
-                        build-args: |
-                            version=${{ needs.discover.outputs.version }}
-                            NUGET_USERNAME=${{ vars.NUGET_USERNAME }}
-                            NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}
-                
             -   name: Tag version
-                if: github.ref == 'refs/heads/main' && github.event_name != 'pull-request'
+                if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
                 run: |
                     git tag ${{ needs.discover.outputs.version_tag }}
                     git push origin --tags
+                
