--- a/.github/workflows/dotnet-image-generation.yaml
+++ b/.github/workflows/dotnet-image-generation.yaml
@@ -56,7 +56,7 @@ jobs:
                     NUGET_AUTH_TOKEN: ${{ secrets.ORG_FULL_ACCESS_TOKEN }}
 
             -   name: Test
-                run: dotnet test --configuration Release --verbosity normal --collect:"XPlat Code Coverage" --result-directory ./coverage
+                run: dotnet test --configuration Release --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage                
     
             -   name: Check files
                 if: always() && !cancelled()
