--- a/.github/workflows/dotnet-image-publish.yaml
+++ b/.github/workflows/dotnet-image-publish.yaml
@@ -46,7 +46,7 @@ jobs:
             -   name: Github Packages login
                 uses: docker/login-action@v3
                 with:
-                    registry: ghcr.io
+                    registry: ${{ env.REGISTRY }}
                     username: ${{ github.actor }}
                     password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -69,9 +69,7 @@ jobs:
                 uses: docker/metadata-action@v5
                 with:
                     tags: ${{ steps.tags.outputs.result }}
-                    images: |
-                        ${{ inputs.repository }}
-                        ghcr.io/${{ env.IMAGE_NAME }}
+                    images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
             -   name: Build docker tags
                 id: docker-tags
@@ -79,10 +77,10 @@ jobs:
                 with:
                     result-encoding: string
                     script: |
-                        var tags = ['ghcr.io/${{ inputs.repository }}:edge', 'ghcr.io/${{ inputs.repository }}:${{ inputs.version }}'];
+                        var tags = ['${{ env.REGISTRY }}/${{ inputs.repository }}:edge', '${{ env.REGISTRY }}/${{ inputs.repository }}:${{ inputs.version }}'];
 
                         if (${{ inputs.latest == true }}) {
-                        tags.push('ghcr.io/${{ inputs.repository }}:latest');
+                        tags.push('${{ env.REGISTRY }}/${{ inputs.repository }}:latest');
                         }
             
                         return tags.join('\n');
@@ -90,9 +88,9 @@ jobs:
             -   name: Build and push container release
                 uses: docker/build-push-action@v5
                 with:
+                    context: .
                     push: true
                     tags: |
-                        ${{ steps.docker-tags.outputs.result}}
                         ${{ steps.meta.outputs.tags }}
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
