--- a/.github/workflows/dotnet-image-publish.yaml
+++ b/.github/workflows/dotnet-image-publish.yaml
@@ -58,6 +58,7 @@ jobs:
 
                         
             -   name: Build and push container release
+                if: always() && !cancelled() && github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
                 uses: docker/build-push-action@v5
                 with:
                     context: .
@@ -67,5 +68,18 @@ jobs:
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
                         version=${{ inputs.version }}
+                        NUGET_USERNAME=${{ vars.NUGET_USERNAME }}
+                        NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}
+
+            -   name: Build and push container pre-release
+                if: always() && !cancelled() && github.event_name == 'pull_request'
+                uses: docker/build-push-action@v5
+                with:
+                    context: .
+                    push: true
+                    tags: |
+                        ${{ inputs.repository }}:edge
+                    labels: ${{ steps.meta.outputs.labels }}
+                    build-args: |
                         NUGET_USERNAME=${{ vars.NUGET_USERNAME }}
                         NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}
