--- a/.github/workflows/dotnet-image-publish.yaml
+++ b/.github/workflows/dotnet-image-publish.yaml
@@ -50,27 +50,6 @@ jobs:
                     username: ${{ github.actor }}
                     password: ${{ secrets.GITHUB_TOKEN }}
     
-            -   name: Docker meta
-                id: meta
-                uses: docker/metadata-action@v5
-                with:
-                    images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-                        
-            -   name: Build and push container release
-                if: always() && !cancelled() && github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-                uses: docker/build-push-action@v5
-                with:
-                    context: .
-                    push: true
-                    tags: |
-                        ${{ steps.meta.outputs.tags }}
-                    labels: ${{ steps.meta.outputs.labels }}
-                    build-args: |
-                        version=${{ inputs.version }}
-                        NUGET_USERNAME=${{ vars.NUGET_USERNAME }}
-                        NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}
-
             -   name: Build and push container pre-release
                 if: always() && !cancelled() && github.event_name == 'pull_request'
                 uses: docker/build-push-action@v5
@@ -78,8 +57,7 @@ jobs:
                     context: .
                     push: true
                     tags: |
-                        ${{ inputs.repository }}:edge
-                    labels: ${{ steps.meta.outputs.labels }}
+                        ${{ env.REGISTRY }}/${{ inputs.repository }}:edge
                     build-args: |
                         NUGET_USERNAME=${{ vars.NUGET_USERNAME }}
                         NUGET_TOKEN=${{ secrets.ORG_FULL_ACCESS_TOKEN }}
