--- a/.github/workflows/dotnet-image-publish.yaml
+++ b/.github/workflows/dotnet-image-publish.yaml
@@ -3,10 +3,6 @@ name: Build and publish Docker image to Dockerhub
 on:
     workflow_call:
         inputs:
-            version:
-                description: "New version"
-                required: true
-                type: string
             repository:
                 description: "Repository HAS TO BE THE USER. Otherwise dockerhub wont auth. E.g. 'Hoberg/services-identity' "
                 required: true
@@ -25,8 +21,7 @@ jobs:
         secrets: inherit
     
     test:
-        uses: School-TestExam/core-pipelines/.github/workflows/dotnet-test.yaml@main
-        secrets: inherit
+        uses: School-TestExam/core-pipelines/.github/workflows/dotnet-test.yaml@feature/11-githubimage-workflow
 
     build-and-publish:
         runs-on: ubuntu-latest
